Fixed issues for menu and type ahead module, added beta version for master creator, and changed implementation of dyna api.